--- a/ProcessWatcher/packages.config
+++ b/ProcessWatcher/packages.config
@@ -3,12 +3,14 @@
   <package id="BECCore.AutoLog" version="5.0.0.2" targetFramework="net472" />
   <package id="ControlzEx" version="4.4.0" targetFramework="net472" />
   <package id="DynamicData" version="7.1.1" targetFramework="net472" />
+  <package id="Fody" version="6.3.0" targetFramework="net472" developmentDependency="true" />
   <package id="MahApps.Metro" version="2.4.4" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
   <package id="Notifications.Wpf" version="0.1.1" targetFramework="net472" />
   <package id="Pharmacist.Common" version="2.0.6" targetFramework="net472" />
   <package id="ReactiveUI" version="13.2.2" targetFramework="net472" />
   <package id="ReactiveUI.Events.WPF" version="13.2.2" targetFramework="net472" />
+  <package id="ReactiveUI.Fody" version="13.2.2" targetFramework="net472" />
   <package id="ReactiveUI.WPF" version="13.2.2" targetFramework="net472" />
   <package id="Splat" version="10.0.1" targetFramework="net472" />
   <package id="System.Reactive" version="5.0.0" targetFramework="net472" />
