Working but without Grouping

--- a/ProcessWatcher.CustomControls/ProcessWatcher.CustomControls.csproj
+++ b/ProcessWatcher.CustomControls/ProcessWatcher.CustomControls.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net472</TargetFramework>
         <UseWPF>true</UseWPF>
+        <LangVersion>9</LangVersion>
     </PropertyGroup>
 
 </Project>
