--- a/ProcessWatcher/App.config
+++ b/ProcessWatcher/App.config
@@ -1,6 +1,44 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+    <configSections>
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+        <section name="entityFramework"
+                 type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+                 requirePermission="false" />
+    </configSections>
+    <startup>
+        <supportedRuntime version="v4.0"
+                          sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <entityFramework>
+        <providers>
+            <provider invariantName="System.Data.SqlClient"
+                      type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+        </providers>
+    </entityFramework>
+    <appSettings>
+        <add key="LogsBufferSize" value="1000"/>
+        <add key="Percorso1" value="D:\RiderProjects\ProcessWatcher\TestRunningConsole\bin\Debug\TestRunningConsole.exe" />
+        <add key="AutoRestart1" value="True" />
+        <add key="Percorso2" value="D:\RiderProjects\ProcessWatcher\TestRunningConsole\bin\Debug\TestRunningConsole - Copia.exe" />
+        <add key="AutoRestart2" value="True" />
+        <add key="Percorso3" value="D:\RiderProjects\ProcessWatcher\TestRunningConsole\bin\Debug\TestRunningConsole - Copia (4).exe" />
+        <add key="AutoRestart3" value="True" />
+        <add key="Percorso4" value="D:\RiderProjects\ProcessWatcher\TestRunningConsole\bin\Debug\TestRunningConsole - Copia (3).exe" />
+        <add key="AutoRestart4" value="False" />
+        <add key="Percorso5" value="D:\RiderProjects\ProcessWatcher\TestRunningConsole\bin\Debug\TestRunningConsole - Copia (2).exe" />
+        <add key="AutoRestart5" value="False" />
+        <add key="Percorso6" value="D:\RiderProjects\ProcessWatcher\TestRunningConsole\bin\Debug\TestRunningConsole - Copia (2) - Copia.exe" />
+        <add key="AutoRestart6" value="False" />
+    </appSettings>
+    <system.data>
+        <DbProviderFactories>
+            <remove invariant="System.Data.SQLite.EF6" />
+            <add name="SQLite Data Provider (Entity Framework 6)"
+                 invariant="System.Data.SQLite.EF6"
+                 description=".NET Framework Data Provider for SQLite (Entity Framework 6)"
+                 type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
+        </DbProviderFactories>
+    </system.data>
 </configuration>
