--- a/ProcessWatcher.Language/ProcessWatcher.Language.csproj
+++ b/ProcessWatcher.Language/ProcessWatcher.Language.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net472</TargetFramework>
+        <RootNamespace>ProcessWatcher.Resources</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
