--- a/ProcessWatcher/packages.config
+++ b/ProcessWatcher/packages.config
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BECCore.AutoLog" version="5.0.0.2" targetFramework="net472" />
+  <package id="BECCore.EntityHelper" version="5.0.1.306" targetFramework="net472" />
   <package id="ControlzEx" version="4.4.0" targetFramework="net472" />
   <package id="DynamicData" version="7.1.1" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="Fody" version="6.3.0" targetFramework="net472" developmentDependency="true" />
   <package id="MahApps.Metro" version="2.4.4" targetFramework="net472" />
+  <package id="MahApps.Metro.IconPacks" version="4.8.0" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
   <package id="Notifications.Wpf" version="0.1.1" targetFramework="net472" />
   <package id="Pharmacist.Common" version="2.0.6" targetFramework="net472" />
@@ -12,7 +15,11 @@
   <package id="ReactiveUI.Events.WPF" version="13.2.2" targetFramework="net472" />
   <package id="ReactiveUI.Fody" version="13.2.2" targetFramework="net472" />
   <package id="ReactiveUI.WPF" version="13.2.2" targetFramework="net472" />
+  <package id="SQLite.CodeFirst" version="1.6.0.30" targetFramework="net472" />
   <package id="Splat" version="10.0.1" targetFramework="net472" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net472" />
+  <package id="System.Data.SQLite.Core" version="1.0.113.7" targetFramework="net472" />
+  <package id="System.Data.SQLite.EF6" version="1.0.113.0" targetFramework="net472" />
   <package id="System.Reactive" version="5.0.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
