--- a/ProcessWatcher/ProcessWatcher.csproj
+++ b/ProcessWatcher/ProcessWatcher.csproj
@@ -205,6 +205,10 @@
       <HintPath>..\packages\Microsoft.Xaml.Behaviors.Wpf.1.1.19\lib\net45\Design\Microsoft.Xaml.Behaviors.Design.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MoreLinq.Portable, Version=1.4.18916.0, Culture=neutral, PublicKeyToken=384d532d7e88985d">
+      <HintPath>..\packages\MoreLinq.Portable.1.4.0\lib\portable-net4+sl5+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1\MoreLinq.Portable.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="Notifications.Wpf, Version=0.1.1.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\packages\Notifications.Wpf.0.1.1\lib\net461\Notifications.Wpf.dll</HintPath>
@@ -293,6 +297,7 @@
     <Compile Include="Statics.cs" />
     <Compile Include="Utils\CircularBuffer.cs" />
     <Compile Include="Utils\Converters.cs" />
+    <Compile Include="Utils\CustomCollectionViewSourceProperties.cs" />
     <Compile Include="Utils\Extensions.cs" />
     <Compile Include="Utils\ProcessUtils.cs" />
     <Compile Include="ViewModels\LogsViewModel.cs" />
@@ -359,7 +364,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="eye.ico" />
+    <Resource Include="eye.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.6.3.0\build\Fody.targets" Condition="Exists('..\packages\Fody.6.3.0\build\Fody.targets')" />
