--- a/ProcessWatcher/packages.config
+++ b/ProcessWatcher/packages.config
@@ -9,6 +9,7 @@
   <package id="MahApps.Metro" version="2.4.4" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks" version="4.8.0" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
+  <package id="MoreLinq.Portable" version="1.4.0" targetFramework="net472" />
   <package id="Notifications.Wpf" version="0.1.1" targetFramework="net472" />
   <package id="Pharmacist.Common" version="2.0.6" targetFramework="net472" />
   <package id="ReactiveUI" version="13.2.2" targetFramework="net472" />
