--- a/ProcessWatcher/App.config
+++ b/ProcessWatcher/App.config
@@ -15,6 +15,9 @@
     </entityFramework>
     <appSettings>
         <add key="LogsBufferSize" value="1000" />
+        <add key="Percorso1" value="C:\G20ClientRoma\G20Client.exe" />
+        <add key="AutoRestart1" value="True" />
+        <add key="GroupKey1" value="CLIENT" />
     </appSettings>
     
 </configuration>
