--- a/ProcessWatcher/App.config
+++ b/ProcessWatcher/App.config
@@ -15,7 +15,7 @@
     </entityFramework>
     <appSettings>
         <add key="LogsBufferSize" value="1000" />
-        <add key="Percorso1" value="C:\G20ClientRoma\G20Client.exe" />
+        <add key="Percorso1" value="D:\RiderProjects\ProcessWatcher\TestRunningConsole\bin\Debug\TestRunningConsole.exe" />
         <add key="AutoRestart1" value="True" />
         <add key="GroupKey1" value="CLIENT" />
     </appSettings>
